--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Electronics Communication Student</title>
+    <title>S Razikur Rahman - Electronics Communication Engineering Student</title>
     <style>
         body {
             background-color: #f0f0f0;
@@ -17,20 +17,23 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Electronics Communication Student Portfolio</h1>
+        <h1>Welcome to My Portfolio - S Razikur Rahman</h1>
     </header>
     <section>
         <h2>About Me</h2>
-        <p>I am an Electronics Communication Student with a passion for technology and innovation. I am currently studying at XYZ University and am expected to graduate in 2026.</p>
+        <p>I am S Razikur Rahman, an Electronics Communication Engineering student at Jain University Banglore. I am expected to graduate in the year 2027.</p>
     </section>
     <section>
-        <h2>My Projects</h2>
-        <p>Here are some of the projects I have worked on:</p>
+        <h2>My Files</h2>
+        <p>Here are some of the files I have worked on:</p>
         <ul>
-            <li><a href="project1.html">Project 1: Wireless Communication System</a></li>
-            <li><a href="project2.html">Project 2: Digital Signal Processing</a></li>
-            <li><a href="project3.html">Project 3: Embedded Systems Design</a></li>
+            <li><a href="main.py">File 1 - main.py file</a></li>
+            <li><a href="inventory.xlsx">File 2 - inventory.xlsx file</a></li>
+            <li><a href="material_types.txt">File 3 - material_types.txt file</a></li>
         </ul>
     </section>
-    </body>
+    <footer>
+        <p>Copyright © 2024 S Razikur Rahman. All rights reserved.</p>
+    </footer>
+</body>
 </html>
