--- a/index.html
+++ b/index.html
@@ -4,14 +4,28 @@
     <title>S Razikur Rahman - Electronics Communication Engineering Student</title>
     <style>
         body {
-            background-color: #f0f0f0;
+            background-image: url('sketchy-background.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
             font-family: Arial, sans-serif;
         }
         h1, h2 {
-            color: #333;
+            color: #fff;
         }
         p {
-            color: #666;
+            color: #ccc;
+        }
+        .electronics-things {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            text-align: center;
+        }
+        .electronics-things img {
+            height: 100px;
+            margin: 0 20px;
         }
     </style>
 </head>
@@ -19,6 +33,7 @@
     <header>
         <h1>Welcome to My Portfolio - S Razikur Rahman</h1>
     </header>
+   
     <section>
         <h2>About Me</h2>
         <p>I am S Razikur Rahman, an Electronics Communication Engineering student at Jain University Banglore. I am expected to graduate in the year 2027.</p>
