--- a/index.html
+++ b/index.html
@@ -4,41 +4,45 @@
     <title>S Razikur Rahman - Electronics Communication Engineering Student</title>
     <style>
         body {
-            background-image: url('sketchy-background.jpg');
-            background-repeat: no-repeat;
-            background-size: cover;
+            background-color: black;
+            color: cyan;
             font-family: Arial, sans-serif;
+            margin: 0;
         }
-        h1, h2 {
-            color: #fff;
-        }
-        p {
-            color: #ccc;
-        }
-        .electronics-things {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 100%;
+        header {
             text-align: center;
         }
-        .electronics-things img {
+       .about-me {
+            display: flex;
+            align-items: center;
+            text-align: left;
+            margin: 10px;
+            margin-top: 300px;
+        }
+       .about-me img {
             height: 100px;
-            margin: 0 20px;
+            margin-right: 20px;
+        }
+       .files {
+            margin-left: 20px;
+        }
+        footer {
+            text-align: center;
+            margin-top: 800px;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio - S Razikur Rahman</h1>
+        <h1>Welcome </h1>
     </header>
-   
-    <section>
-        <h2>About Me</h2>
-        <p>I am S Razikur Rahman, an Electronics Communication Engineering student at Jain University Banglore. I am expected to graduate in the year 2027.</p>
-    </section>
-    <section>
+    <section class="about-me">
+        <section>
+            <h2>About Me</h2>
+            <p>I am S Razikur Rahman, an Electronics Communication Engineering student at Jain University Banglore. I am expected to graduate in the year 2027.</p>
+        </section>
+    
+    <section class="files">
         <h2>My Files</h2>
         <p>Here are some of the files I have worked on:</p>
         <ul>
@@ -47,8 +51,6 @@
             <li><a href="material_types.txt">File 3 - material_types.txt file</a></li>
         </ul>
     </section>
-    <footer>
-        <p>Copyright © 2024 S Razikur Rahman. All rights reserved.</p>
-    </footer>
+    
 </body>
 </html>
