--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="about-me">
         <section>
             <h2>About Me</h2>
-            <p>I am S Razikur Rahman, an Electronics Communication Engineering student at Jain University Banglore. I am expected to graduate in the year 2027.</p>
+            <p>I am S Razikur Rahman, an Electronics Communication Engineering student at Jain University Banglore.<br> I am expected to graduate in the year 2027.</p>
         </section>
     
     <section class="files">
