--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>S Razikur Rahman - Electronics Communication Engineering Student</title>
     <style>
         body {
-            background-color: black;
+            
+            background-color: #ff6699;
             color: cyan;
             font-family: Arial, sans-serif;
             margin: 0;
