--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body {
             
-            background-color: #ff6699;
+            background-color: #43819e;
             color: cyan;
             font-family: Arial, sans-serif;
             margin: 0;
