--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <style>
         body {
             
-            background-color: #43819e;
-            color: cyan;
+           background-color: #43819e;
+            color: #000000;
             font-family: Arial, sans-serif;
             margin: 0;
         }
